tests/negative/typecheck/try_error.orng
// try_error.orng:10:8: error: expected a value of type `(ok: Int | err: Char)`, got a value of type `Int`
//     try g()
//       ^
// 
fn main() -> Int {
    f() catch 0
}

fn f() -> Char!Int {
    try g()
}

fn g() -> ()!Int {
    return .err
}